blocklist.site: added ip4 resource to abuse list

--- a/README.html
+++ b/README.html
@@ -615,7 +615,7 @@ must be used and this tool needs the configuration of the sources.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Blocklist Site Abuse</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">blacklist</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">abuse</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">domain</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ip4 domain</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://blocklist.site">web</a></p></td>
 </tr>
 <tr>
@@ -3122,7 +3122,7 @@ must be used and this tool needs the configuration of the sources.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-11-14 08:17:21 +0100
+Last updated 2020-12-14 05:54:46 +0100
 </div>
 </div>
 </body>
