fixed typo error in phishing

--- a/README.html
+++ b/README.html
@@ -525,10 +525,10 @@ must be used and this tool needs the configuration of the sources.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://safebrowsing.google.com/">web</a></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href=".//services/sblookup/safebrowsing-phising.json">safebrowsing-phising</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Google Safe Browsing - Phising</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href=".//services/sblookup/safebrowsing-phishing.json">safebrowsing-phishing</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Google Safe Browsing - Phishing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">blacklist</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">phising</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">phishing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">domain</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://safebrowsing.google.com/">web</a></p></td>
 </tr>
@@ -1022,7 +1022,7 @@ must be used and this tool needs the configuration of the sources.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href=".//services/file/hosts-file-net-psh.json">hosts-file.net-psh</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">hpHosts Online phishing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">blacklist</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">phising</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">phishing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">domain</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://hosts-file.net">web</a></p></td>
 </tr>
@@ -1492,7 +1492,7 @@ must be used and this tool needs the configuration of the sources.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href=".//services/dnsxl/dnsrbl-org.json">dnsrbl.org</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">DNSRBL - DNS Real-time Blackhole List</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">blacklist</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">spam malware phising</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">spam malware phishing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">ip4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="http://dnsrbl.org/">web</a></p></td>
 </tr>
@@ -1796,7 +1796,7 @@ must be used and this tool needs the configuration of the sources.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href=".//services/dnsxl/msrbl-net-combined.json">msrbl.net-combined</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MSRBL combined</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">blacklist</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">spam phising malware</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">spam phishing malware</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">ip4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="http://www.msrbl.com/">web</a></p></td>
 </tr>
@@ -1812,7 +1812,7 @@ must be used and this tool needs the configuration of the sources.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href=".//services/dnsxl/msrbl-net-phishing.json">msrbl.net-phishing</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MSRBL phishing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">blacklist</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">phising</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">phishing</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">ip4</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="http://www.msrbl.com/">web</a></p></td>
 </tr>
@@ -3122,7 +3122,7 @@ must be used and this tool needs the configuration of the sources.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-12-14 05:54:46 +0100
+Last updated 2020-12-17 05:34:16 +0100
 </div>
 </div>
 </body>
